[gd_scene load_steps=8 format=3 uid="uid://bqfvrnfqkk0qr"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_j3y5c"]
[ext_resource type="PackedScene" uid="uid://c2qg7mvxvlmqu" path="res://scenes/player.tscn" id="2_ux8kv"]
[ext_resource type="PackedScene" uid="uid://upgrade_panel" path="res://scenes/upgrade_panel.tscn" id="3_upgrade"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="4_camera"]
[ext_resource type="PackedScene" uid="uid://death_screen_001" path="res://scenes/death_screen.tscn" id="5_death"]
[ext_resource type="PackedScene" uid="uid://pause_menu_001" path="res://scenes/pause_menu.tscn" id="6_pause"]
[ext_resource type="PackedScene" uid="uid://chest_opening_ui_001" path="res://scenes/chest_opening_ui.tscn" id="7_chest"]

[node name="Main" type="Node2D"]
script = ExtResource("1_j3y5c")

[node name="Background" type="ColorRect" parent="."]
offset_left = -2000.0
offset_top = -2000.0
offset_right = 2000.0
offset_bottom = 2000.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="Player" parent="." instance=ExtResource("2_ux8kv")]

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(640, 360)
script = ExtResource("4_camera")

[node name="XPLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 24
text = "XP: 0"

[node name="LevelLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 45.0
offset_right = 150.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "Level: 1"

[node name="XPBarLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 75.0
offset_right = 150.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 14
text = "0 / 100 XP"

[node name="XPProgressBar" type="ProgressBar" parent="."]
offset_left = 10.0
offset_top = 95.0
offset_right = 210.0
offset_bottom = 105.0
max_value = 100.0
value = 0.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="."]
offset_left = 1070.0
offset_top = 10.0
offset_right = 1270.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "100 / 100 HP"
horizontal_alignment = 2

[node name="HealthProgressBar" type="ProgressBar" parent="."]
offset_left = 1070.0
offset_top = 40.0
offset_right = 1270.0
offset_bottom = 50.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="TimeLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 120.0
offset_right = 150.0
offset_bottom = 145.0
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 16
text = "Time: 00:00"

[node name="DifficultyLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 145.0
offset_right = 150.0
offset_bottom = 165.0
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 14
text = "Difficulty: x1.0"

[node name="CoinsLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 165.0
offset_right = 150.0
offset_bottom = 185.0
theme_override_colors/font_color = Color(1, 0.85, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "ðŸ’° Coins: 0"

[node name="BossNameLabel" type="Label" parent="."]
visible = false
offset_left = 490.0
offset_top = 10.0
offset_right = 790.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 24
text = "BOSS: Name"
horizontal_alignment = 1

[node name="BossHealthBar" type="ProgressBar" parent="."]
visible = false
offset_left = 440.0
offset_top = 45.0
offset_right = 840.0
offset_bottom = 65.0
max_value = 800.0
value = 800.0
show_percentage = false

[node name="BossHealthLabel" type="Label" parent="."]
visible = false
offset_left = 440.0
offset_top = 70.0
offset_right = 840.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 16
text = "800 / 800 HP"
horizontal_alignment = 1

[node name="ActiveWeaponsTitle" type="Label" parent="."]
offset_left = 1070.0
offset_top = 120.0
offset_right = 1270.0
offset_bottom = 145.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "ACTIVE WEAPONS"
horizontal_alignment = 2

[node name="BasicWeaponIcon" type="Label" parent="."]
offset_left = 1070.0
offset_top = 150.0
offset_right = 1270.0
offset_bottom = 175.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 16
text = "â€¢ Basic Shot"
horizontal_alignment = 2

[node name="LaserWeaponIcon" type="Label" parent="."]
visible = false
offset_left = 1070.0
offset_top = 175.0
offset_right = 1270.0
offset_bottom = 200.0
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 16
text = "â€¢ Laser Beam"
horizontal_alignment = 2

[node name="ShotgunWeaponIcon" type="Label" parent="."]
visible = false
offset_left = 1070.0
offset_top = 200.0
offset_right = 1270.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 16
text = "â€¢ Shotgun"
horizontal_alignment = 2

[node name="OrbitingWeaponIcon" type="Label" parent="."]
visible = false
offset_left = 1070.0
offset_top = 225.0
offset_right = 1270.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 16
text = "â€¢ Orbiting Shield"
horizontal_alignment = 2

[node name="HomingWeaponIcon" type="Label" parent="."]
visible = false
offset_left = 1070.0
offset_top = 250.0
offset_right = 1270.0
offset_bottom = 275.0
theme_override_colors/font_color = Color(1, 0.5, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 16
text = "â€¢ Homing Missiles"
horizontal_alignment = 2

[node name="ChainLightningIcon" type="Label" parent="."]
visible = false
offset_left = 1070.0
offset_top = 275.0
offset_right = 1270.0
offset_bottom = 300.0
theme_override_colors/font_color = Color(0.3, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 16
text = "â€¢ Chain Lightning"
horizontal_alignment = 2

[node name="BoomerangIcon" type="Label" parent="."]
visible = false
offset_left = 1070.0
offset_top = 300.0
offset_right = 1270.0
offset_bottom = 325.0
theme_override_colors/font_color = Color(0.8, 0.6, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 16
text = "â€¢ Boomerang"
horizontal_alignment = 2

[node name="FlamethrowerIcon" type="Label" parent="."]
visible = false
offset_left = 1070.0
offset_top = 325.0
offset_right = 1270.0
offset_bottom = 350.0
theme_override_colors/font_color = Color(1, 0.5, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 16
text = "â€¢ Flamethrower"
horizontal_alignment = 2

[node name="ToxicPoolsIcon" type="Label" parent="."]
visible = false
offset_left = 1070.0
offset_top = 350.0
offset_right = 1270.0
offset_bottom = 375.0
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 16
text = "â€¢ Toxic Pools"
horizontal_alignment = 2

[node name="DashLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 650.0
offset_right = 150.0
offset_bottom = 680.0
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "DASH [SPACE]"

[node name="DashCooldownBar" type="ProgressBar" parent="."]
offset_left = 10.0
offset_top = 680.0
offset_right = 150.0
offset_bottom = 695.0
max_value = 2.0
value = 2.0
show_percentage = false

[node name="UltimateLabel" type="Label" parent="."]
offset_left = 160.0
offset_top = 650.0
offset_right = 350.0
offset_bottom = 680.0
theme_override_colors/font_color = Color(1, 0.5, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "ULTIMATE [R]"

[node name="UltimateCooldownBar" type="ProgressBar" parent="."]
offset_left = 160.0
offset_top = 680.0
offset_right = 350.0
offset_bottom = 695.0
max_value = 10.0
value = 10.0
show_percentage = false

[node name="DebugLevelUpButton" type="Button" parent="."]
offset_left = 550.0
offset_top = 10.0
offset_right = 730.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 0.5, 0, 1)
theme_override_font_sizes/font_size = 20
text = "DEBUG: Level Up"

[node name="DebugDieButton" type="Button" parent="."]
offset_left = 740.0
offset_top = 10.0
offset_right = 920.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 20
text = "DEBUG: Die"

[node name="UpgradePanel" parent="." instance=ExtResource("3_upgrade")]

[node name="DeathScreen" parent="." instance=ExtResource("5_death")]

[node name="PauseMenu" parent="." instance=ExtResource("6_pause")]

[node name="ChestOpeningUI" parent="." instance=ExtResource("7_chest")]
